# kobo-screen-mirror

./: README.md  api.rs
mirKobo-host/: Cargo.toml
mirKobo-host/src/: main.rs  server.rs
mirKobo-kobo/: Cargo.toml  deploy.sh
mirKobo-kobo/src/: api.rs  client.rs  device.rs  main.rs
