[package]
name = "mirKobo-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Gui
egui = "0.22.0"
eframe = "0.22.0"

# Logging
env_logger = "0.10"
log = "0.4.20"

# Network
message-io = "0.17.0"
