[package]
name = "mir_kobo_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Gui
egui = "0.22.0"
eframe = "0.22.0"
image = { version = "0.24", features = ["png"] }
egui_extras = { version = "0.22", features = ["image"] }

# Logging
env_logger = "0.10"
log = "0.4.20"

# Network
message-io = { version = "0.17", default-features = false, features = ["tcp", "websocket", "tungstenite", "socket2"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
